--- a/topografiya/templates/leader/program_works/program_work_form.html
+++ b/topografiya/templates/leader/program_works/program_work_form.html
@@ -128,7 +128,7 @@
                                                    </div>
                                                </div>
                                                <div class="mb-3 row">
-                                                   <p style="text-align: center" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</p>
+                                                   <p style="text-align: center" class="col-sm-12 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</p>
 
                                                </div>
                                                <div style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">7.1</span> Вид, масштаб и объем съемки.</div>
@@ -381,11 +381,8 @@
                                                        <textarea class="form-control" name="a6" type="text" placeholder="производится описание принятого вида обоснования, его точность;">{{ form.a6 }}</textarea>
                                                    </div>
                                                </div>
-                                               <div class="mb-3 row">
-                                                   <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</label>
-                                                   <div class="col-sm-9">
-                                                       <textarea style="height: 100px;" name="a7" class="form-control" type="text" placeholder="производится описание принятого вида обоснования, его точность;">{{ form.a7 }}</textarea>
-                                                   </div>
+                                               <div class="text-center col-md-12">
+                                                   <h2>7. ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</h2>
                                                </div>
                                                <div style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">7.1</span> Вид, масштаб и объем съемки.</div>
                                                <div class="col-sm-12">
