--- a/topografiya/templates/worker/komeral/komeral_works.html
+++ b/topografiya/templates/worker/komeral/komeral_works.html
@@ -91,11 +91,8 @@
                                                             <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b><span style="color: #168eea;font-size:30px;">
 
-                                                                {% for work in rejecteds %}
-                                                                        {% if work.workerobject == object.object %}
-                                                                             <b  class="count" data-all="{{ work.workerobject }},"></b>
-                                                                        {% endif %}
-                                                                    {% endfor %}
+                                        <b  class="count" data-all="{% for work in rejecteds %}{% if work.workerobject == object.object %} {{ work.workerobject.id }},{% endif %}{% endfor %}"></b>
+
 
                                                             </span></div>
                                                         </div>
@@ -179,7 +176,7 @@
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="{% url 'checking_polevoy_works' id=object.object.id %}">
+                                                            <a href="{% url 'show_rejected_komeral_works' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
                                                                     Батафсил маълумот
                                                                 </button>
