--- a/topografiya/templates/worker/polevoy_work_doing.html
+++ b/topografiya/templates/worker/polevoy_work_doing.html
@@ -92,7 +92,7 @@
                                   <a href="#" id="doing_program_work_file" programwork-id="{{ programwork.id }}" ><h6 class=""> <i class="fa fa-file-word-o"></i> Топографик-геодезик дастури файли билан танишиш</h6></a>
                               </div>
                               {% else %}
-                                  <a href="#" target="_blank"><h6 class="text-warning"> <i class="fa fa-file-word-o"></i>Топографик-геодезик дастури тайёрланмоқда</h6></a>
+                                  <a href="#" ><h6 class="text-warning"> <i class="fa fa-file-word-o"></i>Топографик-геодезик дастури тайёрланмоқда</h6></a>
                               {% endif %}
                       {% endif %}
                   </div>
@@ -877,7 +877,7 @@
                              </div>
                          {% else %}
                              <div class="col-md-6 card p-2 shadow-lg">
-                                 <h4 class="btn btn-warning btn-lg"  type="button"> <i class="fa fa-warning"></i> Бу обектда топографик геодезик иш мавжуд! Тасдиқланишни кутинг илтимос!   </h4>
+                                 <h4 class="btn btn-warning btn-lg"  type="button"> <i class="fa fa-warning"></i> Топографик-геодезик дастури тайёрланмоқда!   </h4>
                              </div>
                          {% endif %}
                      {% else %}
