--- a/topografiya/templates/leader/head_komeral/komeral_works.html
+++ b/topografiya/templates/leader/head_komeral/komeral_works.html
@@ -91,11 +91,7 @@
                                                             <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
-                                                                    {% for work in rejecteds %}
-                                                                        {% if work.object == object.object %}
-                                                                            <b  class="count" data-all="{{ work.object}},"></b>
-                                                                        {% endif %}
-                                                                    {% endfor %}
+                                                <b  class="count" data-all="{% for work in rejecteds %}{% if work.object == object.object %} {{ work.object.id }},{% endif %}{% endfor %}"></b>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -179,7 +175,7 @@
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="{% url 'show_komeral_work' id=object.object.id %}">
+                                                            <a href="{% url 'geodeziz_show_komeral_work' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
                                                                     Батафсил маълумот
                                                                 </button>
