--- a/topografiya/templates/leader/komeral/komeral_works.html
+++ b/topografiya/templates/leader/komeral/komeral_works.html
@@ -91,11 +91,7 @@
                                                             <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
-                                                                    {% for work in rejecteds %}
-                                                                        {% if work.workerobject == object.object %}
-                                                                             <b  class="count" data-all="{{ work.workerobject }},"></b>
-                                                                        {% endif %}
-                                                                    {% endfor %}
+                                                                     <b  class="count" data-all="{% for work in rejecteds %}{% if work.workerobject == object.object %} {{ work.workerobject.id }},{% endif %}{% endfor %}"></b>
                                                                 </span>
                                                             </div>
                                                         </div>
