--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -26,17 +26,17 @@
                                 {% endif %}
 
                                 {% if work.status_geodezis_komeral == 2 %}
-                                    <li class="breadcrumb-item"><a href="{% url 'show_komeral_checking_leader' id=work.object.id %}">Выполнение работ</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'leader_rejected_komeral_works' id=work.object.id %}">{{ work.object.pdowork.object_name }}</a></li>
                                     {% elif work.status_geodezis_komeral == 1 %}
-                                     <li class="breadcrumb-item"><a href="{% url 'show_komeral_checking_leader' id=work.object.id %}">Выполнение работ</a></li>
+                                     <li class="breadcrumb-item"><a href="{% url 'show_komeral_checking_leader' id=work.object.id %}">{{ work.object.pdowork.object_name }}</a></li>
                                     {% else %}
-                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_work_doing' id=work.object.id %}">Выполнение работ</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_work_doing' id=work.object.id %}">{{ work.object.pdowork.object_name }}</a></li>
                                 {% endif %}
 
                                 {% if work.status_geodezis_komeral == 2 %}
-                                <li class="breadcrumb-item"><a href="{% url 'leader_rejected_komeral_works' id=work.object.id %}">{{ work.object.pdowork.object_name }}</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">Предписания</a></li>
                                  {% else %}
-                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">{{ work.object.pdowork.object_name}}</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">Предписания</a></li>
                                 {% endif %}
 {#                                <li class="breadcrumb-item">По топографо-геодезическим работам</li>#}
                             </ol>
@@ -329,6 +329,10 @@
                                                         <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
 
+                                                    {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
+
                                                     {% if work.status_geodezis_komeral == 2 %}
                                                          <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
@@ -596,6 +600,10 @@
                                             <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                         {% endif %}
 
+                                         {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
+
                                          {% if work.status_geodezis_komeral == 2 %}
                                              <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
@@ -680,12 +688,22 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text"  placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                              {% if work.status == 0 %}
-                                                <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
-                                                  {% endif %}
-                                             {% if work.status_geodezis_komeral == 2 %}
-                                                         <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                              {% if work.status == 0%}
+                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                             {% endif %}
+                                            {% if work.status == 2 %}
+                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                             {% endif %}
+                                            {% if  work.status_geodezis_komeral == 2 %}
+                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                             {% endif %}
+
+
+                                             {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Yakunlash</button>
                                                      {% endif %}
+
+
 
                                             <input type="text" value="{{ work.id }}" id="work_id" style="display:none;">
                                             <input type="text" value="{{ user.profile.full_name }}" id="worker" style="display:none;">
@@ -937,6 +955,9 @@
                                                     </div>
                                                      {% if work.status == 0 or work.status == 2  or work.status_geodezis_komeral == 2 %}
                                                             <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
+                                                     {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
                                                     <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
 
@@ -1194,6 +1215,9 @@
                                         {% if work.status == 0 or work.status == 2 or work.status_geodezis_komeral == 2 %}
                                              <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
+                                         {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
                                     </div>
@@ -1274,9 +1298,20 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text" value="{{ form.d_13 }}" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                             {% if work.status == 0 or work.status == 2 or work.status_geodezis_komeral == 2 %}
-                                                <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                             {% if work.status == 0 %}
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
                                              {% endif %}
+                                            {% if work.status == 2 %}
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                             {% endif %}
+                                            {% if  work.status_geodezis_komeral == 2 %}
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                             {% endif %}
+
+                                            {% if aktkomeral.status == 2 %}
+                                                        <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                                     {% endif %}
+
 
 
                                             <input type="text" value="{{ work.id }}" id="work_id" style="display:none;">
