--- a/topografiya/templates/worker/polevoy_works.html
+++ b/topografiya/templates/worker/polevoy_works.html
@@ -129,11 +129,8 @@
                                                             <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b><span style="color: #168eea;font-size:30px;">
 
-                                                                {% for work in rejects %}
-                                                                    {% if work.workerobject.object.id == object.object.id %}
-                                                                       <b  class="count" data-all="{{ work.workerobject.object.id }},"></b>
-                                                                    {% endif %}
-                                                                {% endfor %}
+
+                                   <b  class="count" data-all="{% for work in rejecteds %}{% if work.workerobject.object.id == object.object.id %} {{ work.workerobject.object.id }},{% endif %}{% endfor %}"></b>
 
                                                             </span></div>
                                                         </div>
